# sys4lang

./: .gitignore  .ocamlformat  CHANGELOG.md  README.md  dune-project  sys4c.opam  sys4lang.opam
.github/workflows/: build.yml
lib/: ain.ml  ain.mli  arrayInit.ml  builtin.ml  builtin.mli  bytecode.ml  codegen.ml  compileError.ml  compiler.ml  constEval.ml  dasm.ml  dasm.mli  debugInfo.mli  declarations.ml  dune  jaf.ml  lexer.mll  link.ml  parser.mly  pje.ml  pjeLexer.mll  pjeParser.mly  project.ml  sanityCheck.ml  sjis.ml  sjis.mli  typeAnalysis.ml  variableAlloc.ml
lib/common/: ain.ml  ain.mli  builtin.ml  bytecode.ml  dune  jaf.ml  lexer.mll  mt19937.ml  mt19937.mli  parser.mly  pje.ml  pjeLexer.mll  pjeLoader.ml  pjeParser.mly  sjis.ml  typeAnalysis.ml  util.ml
lib/common/test/: dune  pjeTest.ml
lib/compiler/: arrayInit.ml  codegen.ml  compile.ml  constEval.ml  crc32.ml  dasm.ml  dasm.mli  debugInfo.ml  declarations.ml  dune  pje.ml  pjeParser.mly  project.ml  sanityCheck.ml  variableAlloc.ml
lib/compiler/test/: compileTest.ml  crc32Test.ml  dune  pjeTest.ml  typeTest.ml
lib/decompiler/: CFG.ml  CFG.mli  ain.ml  ain.mli  ast.ml  basicBlock.ml  basicBlock.mli  bytesReader.ml  codeGen.ml  codeGen.mli  codeSection.ml  codeSection.mli  controlFlow.ml  decompile.ml  decompile.mli  dune  instructions.ml  instructions.mli  transform.ml  transform.mli  type.ml  type.mli  typeAnalysis.ml  typeAnalysis.mli
lib/decompiler/test/: basicBlockTest.ml  dune
lib/lsp/: completion.ml  completion.mli  declarations.ml  document.ml  document.mli  dune  project.ml  project.mli  types.ml
lib/lsp/test/: completion_test.ml  document_test.ml  dune  lsp_handlers_test.ml
lib/lsp/test/testdata/: classes.jaf  completion.pje  default.pje  definition.jaf  globals.jaf  hover.jaf  signature_help.pje
lib/lsp/test/testdata/src/: MyLib.hll  SHLib.hll  classes.jaf  completion.jaf  completion_globals.jaf  definition.jaf  hover.jaf  references.jaf  signature_help.jaf  (+1 more)
lib/test/: compileTest.ml  dune  pjeTest.ml  test.ml  typeTest.ml
src/: ain.ml  ain.mli  bytecode.ml  cBuffer.ml  compileError.ml  compiler.ml  constEval.ml  declarations.ml  dune  jaf.ml  lexer.mll  link.ml  parser.mly  sanityCheck.ml  sys4c.ml  typeAnalysis.ml  variableAlloc.ml
test/: Math.hll  arith.jaf  array.jaf  char-constant.jaf  class.jaf  const.jaf  control.jaf  delegate.jaf  function.jaf  functype.jaf  global.jaf  hllcall.jaf  lambda.jaf  macro.jaf  main.jaf  message.jaf  objswap.jaf  ref.jaf  run-tests.sh  scope.jaf  string.jaf  struct.jaf  test-runner.sh
test/roundtrip/: run.sh
test/roundtrip/src/: arith.jaf  control.jaf  free.jaf  main.inc  roundtrip.pje
test/roundtrip/src/HLL/: hll.inc
